# nba-scraper-api

./: Dockerfile  README.md  main.py  pyproject.toml
app/api/: api_router.py
app/api/v1/liveness/: liveness_routes.py
app/api/v1/readiness/: readiness_routes.py
app/api/v1/team/expected/: team_expected_models.py  team_expected_routes.py
app/api/v1/team/expected/models/: opponent_total.py  pythagorean_wins.py  team_advanced.py  team_expected.py  team_season.py  team_summary.py  team_total.py
app/api/v1/team/expected/services/: orchestrator.py
app/api/v1/team/expected/services/computation/: pythagorean_wins.py
app/api/v1/team/expected/services/scrape/: scrape_team_season.py
app/utils/scrape/: content.py
conf/: test_runner.sh
conf/docker/: image.service.yaml  image.testing.yaml  service.deployed.dev.yaml  service.local.dev.yaml  testing.local.dev.yaml
tests/config/: definitions.py
tests/e2e/: conftest.py  test_team_expected_routes.py
