[tool.poetry]
name = "nba-scraper-api"
version = "0.1.0"
description = "Poetry specification for library dependencies"
authors = ["Kyle Clark <github.com/kyleaclark>"]

[tool.poetry.dependencies]
python = "3.10.7"
beautifulsoup4 = "^4.11.1"
fastapi = "~0.85.1"
gunicorn = "^20.1.0"
lxml = "^4.9.1"
pandas = "^1.5.1"
python-json-logger = "^2.0.4"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "~0.19.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"